[package]
name = "include-tailwind-build"
description = "build script for include-tailwind"
categories = ["css", "tailwind", "build"]

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde_json = "1"
thiserror = "1"

