[package]
name = "include-tailwind"
description = "simple inclusion of tailwind in rust projects"
keywords = ["css", "tailwind"]
categories = ["web-programming"]

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
axum = ["dep:axum-core", "dep:http"]
maud = ["dep:maud"]

[dependencies]
axum-core = { version = "0.5", optional = true }
http = { version = "1", optional = true }
# maud = { version = "0.26", optional = true }
maud = { git = "https://github.com/lambda-fairy/maud", rev = "09b97ad8df9afbbf8a21f8eb3045d3dbe8faaba3", optional = true }


