[package]
name = "include-tailwind"
description = "simple inclusion of tailwind in rust projects"
keywords = ["css", "tailwind"]
categories = ["web-programming"]

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
axum = ["dep:axum-core", "dep:http"]
maud = ["dep:maud"]

[dependencies]
axum-core = { version = "0.5", optional = true }
http = { version = "1", optional = true }
maud = { version = "0.27", optional = true }


