[package]
name = "web-test"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
include-tailwind = { version = "0.1.0", path = "../include-tailwind", features = ["maud"] }
maud = { version = "0.26.0", features = ["axum"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-livereload = "0.9.3"

[build-dependencies]
include-tailwind-build = { version = "0.1.0", path = "../include-tailwind-build" }
