[package]
name = "web-test"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.86"
axum = "0.8.9"
include-tailwind = { path = "../include-tailwind", features = ["maud", "axum"] }
maud = { version = "0.27.0", features = ["axum"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-livereload = "0.10.3"

[build-dependencies]
include-tailwind-build = { path = "../include-tailwind-build" }

